@@ -34,6 +34,10 @@ Changes from versions 4.2.* to version 4.3.0:
   This very slightly changes both the API and the ABI in a corner case
   (soname not changed as the old behavior can be surprising and almost
   be regarded as a bug).
+- Detect the use of GMP's buggy vsnprintf replacement at configure time.
+  With it, the tests of "%a" will be disabled to avoid an assertion failure
+  in the MPFR testsuite. A warning will be displayed in the configure output
+  in such a case.
 
 Changes from versions 4.1.* to version 4.2.0:
 - The "fondue savoyarde" release.
